# OpenGL-Earth

./: .gitignore  CMakeLists.txt  README.md  main.cpp
maprenderer/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  DataLoader.cpp  DataLoader.h  Feature.h  GeographicLoader.cpp  Map.cpp  Map.h  OpenGL.h  Polygon.cpp  Polygon.h  Projection.cpp  Projection.h  Renderer.cpp  Renderer.h  Transformation.cpp
maprenderer/lib/: Coordinate.h  GeographicLoader.cpp  GeographicLoader.h  Polygon.cpp  Polygon.h  Projection.cpp  Projection.h  Transformation.h
maprenderer/shaders/: fragment.glsl  vertex.glsl
qml/: main.qml
